tests/paczka1/fuzzy1/31984219.err
Error in line 1: SYP S990 55,6
Error in line 6: Bwu9Er9 S6J0 30,3
Error in line 8: eUQimb8lo A570 8,57
Error in line 2: Bwu9Er9 S610 53,1
Error in line 21: Bwu9Er9 S990 24,4
Error in line 19: PW51FTi2bn A429 49,3
Error in line 10: eUQimb8lo A570 6,5
